# compiler

./: .gitignore  compiler.cabal
Compiler/: Disjoint.hs  Lock.hs  Primitive.hs  Prop.hs  STM.hs  Sharing.hs
Compiler/Lock/: Shared.hs
Compiler/STM/: Chan.hs
